--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,31 @@
 
         <activity
             android:name=".activity.navigationdrawer.NavigationDrawerActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize">
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <!--<activity-->
-            <!--android:name=".activity.slidingmenu.SlidingMenuActivity"-->
-            <!--android:label="@string/app_name"-->
-            <!--android:configChanges="orientation|screenSize">-->
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+        <!--android:name=".activity.slidingmenu.SlidingMenuActivity"-->
+        <!--android:label="@string/app_name"-->
+        <!--android:configChanges="orientation|screenSize">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN" />-->
+        <!--<category android:name="android.intent.category.LAUNCHER" />-->
+        <!--</intent-filter>-->
         <!--</activity>-->
+
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="my_database.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1" />
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="com.jp.materialdesignsample.domain.model.User" />
     </application>
 </manifest>
